--- a/public/assets/css-surat/pdf-invoice.css
+++ b/public/assets/css-surat/pdf-invoice.css
@@ -219,13 +219,18 @@ h3 {
 
 
 }
-.bank tr td:nth-child(odd){
-    border: 2px solid #102b5d;
-    text-align: center;
 
-}
 .bank{
     margin-top: 60px;
-    font-size: 12px;
+    font-size: 8px;
+    text-align: center;
+    border-collapse: collapse;
 
 }
+
+.bank td th{
+    border: 1px solid;
+
+}
+
+
