--- a/public/assets/css-surat/pdf.css
+++ b/public/assets/css-surat/pdf.css
@@ -1,10 +1,57 @@
+:root {
+    font-family: 'Calibri';
+}
+
+/* @page {
+    margin: 180px 20px 100px 20px;
+} */
+
+@font-face {
+    font-family: 'Calibri';
+    src: local('Calibri Regular'), local('Calibri-Regular'),
+        url('Calibri.woff2') format('woff2'),
+        url('Calibri.woff') format('woff'),
+        url('Calibri.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Calibri';
+    src: local('Calibri Bold'), local('Calibri-Bold'),
+        url('Calibri-Bold.woff2') format('woff2'),
+        url('Calibri-Bold.woff') format('woff'),
+        url('Calibri-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Calibri';
+    src: local('Calibri Bold Italic'), local('Calibri-Bold-Italic'),
+        url('Calibri-BoldItalic.woff2') format('woff2'),
+        url('Calibri-BoldItalic.woff') format('woff'),
+        url('Calibri-BoldItalic.ttf') format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+
+@font-face {
+    font-family: 'Calibri';
+    src: local('Calibri Italic'), local('Calibri-Italic'),
+        url('Calibri-Italic.woff2') format('woff2'),
+        url('Calibri-Italic.woff') format('woff'),
+        url('Calibri-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
 .header {
     position: fixed;
     /* margin-top: 20px; */
-    top: -40px;
-    left: 40px;
+    /* top: 20px; */
+    left: 70px;
     /* right: -20px; */
-    width: 24%;
+    width: 20%;
     /* margin-:50px; */
     /* margin-right: 0; */
     /* margin-left: 0;
@@ -24,6 +71,19 @@
 
 
 }
+.header-online{
+    position: fixed;
+    /* float: right; */
+    right: -20px;
+    top: -1cm;
+    /* left: -50px; */
+    width: 27%;
+    margin-bottom: 20px;
+}
+.report-container thead{
+    color: white;
+    background-color: #4caf50 ;
+}
 .ttd{
     width: 95%;
 }
@@ -38,12 +98,32 @@
     padding-bottom: 30px;
     margin-bottom: 30px;
 }
+.judul-online {
+    /* font-family: Calibri; */
+    font-weight: bold;
+    font-style: normal;
+    font-size: 12px;
+    text-decoration: underline;
+    text-align: center;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
 
 .sub-judul {
     /* font-family: Calibri; */
     /* font-weight: bold;
     text-transform: uppercase; */
-    margin-top: 30px;
+    margin-top: 20px;
+    font-size: 14px;
+    /* tab-size: 4; */
+    /* padding-bottom: 20px; */
+}
+.sub-judul-online {
+    /* font-family: Calibri; */
+    /* font-weight: bold;
+    text-transform: uppercase; */
+    margin-top: 20px;
+    font-size: 12px;
     /* tab-size: 4; */
     /* padding-bottom: 20px; */
 }
@@ -74,5 +154,16 @@
 
 }
 .report-container{
-    font-size: small;
+    font-size: 12px;
+    margin-top: 20px;
+    border-collapse: collapse;
+
+}
+.tfoot tr {
+    font-weight: bold;
+    text-transform: uppercase;
+    background-color: #e6e6e6aa;
+    text-align: right;
+    border: 0;
+
 }
