--- a/public/assets/css-surat/report.css
+++ b/public/assets/css-surat/report.css
@@ -56,6 +56,15 @@
     width: 20%;
     margin-bottom: 20px;
 }
+.header-online1{
+    position: fixed;
+    /* float: right; */
+    right: -20px;
+    top: -1cm;
+    /* left: -50px; */
+    width: 30%;
+    margin-bottom: 20px;
+}
 
 .header-invoice {
     position: fixed;
@@ -134,6 +143,8 @@ main {
 
 .table {
     border-collapse: collapse;
+    /* border: black; */
+    /* border: ; */
     width: 100%;
     margin-top: 20px;
 }
