--- a/public/assets/css-surat/detail_barang.css
+++ b/public/assets/css-surat/detail_barang.css
@@ -1,4 +1,3 @@
-
 :root {
     font-family: 'Calibri';
 }
@@ -57,6 +56,7 @@
 
 
 }
+
 .footer-invoice {
     position: fixed;
     bottom: -1.2cm;
@@ -68,28 +68,8 @@
 
 
 }
-.header-invoice2 {
-    position: fixed;
-    /* margin-top: 20px; */
-    top: 30px;
-    right: 100px;
-    /* right: -20px; */
-    width: 32%;
-    opacity: 0.9;
 
-
-}
-.header-invoice3 {
-    position: fixed;
-    /* margin-top: 20px; */
-    top: -15px;
-    right: -15px;
-    /* right: -20px; */
-    width: 18%;
-
-
-}
-.ttd{
+.ttd {
     width: 95%;
 }
 
@@ -112,36 +92,116 @@
     /* tab-size: 4; */
     /* padding-bottom: 20px; */
 }
-.left {
-    font-family: Calibri;
-    position: relative;
-    /* font-weight: bold;
-    text-transform: uppercase; */
-    /* margin-left: 200px;
-    margin-bottom: 20px; */
-    /* tab-size: 4; */
-    /* padding-bottom: 20px; */
+
+header {
+
+    align-items: center;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+}
+
+main {
+    margin: 0;
+    /* padding-top: 100px; */
+}
+
+body {
+    padding-top: 180px;
+    padding-bottom: 20px;
+
 }
 
 
+.header-invoice3 {
+    position: fixed;
+    top: -5;
+    left: -20;
+    width: 10%;
+  
+}
+
 .title1 {
-    position: absolute;
+    position: fixed;
     font-family: Calibri;
     font-weight: bold;
     font-style: normal;
-    font-size: 28px;
-    color:#00ad4c;
-    color:#102b5d;
+    font-size: 24px;
+    color: #4D78C4;
+    top: -10;
 
-    /* text-align: center; */
+    margin-left: 70px;
+    /* Adjust margin-left to create space between .header-invoice3 and .title1 */
+    flex-grow: 1;
+    /* Allow .title1 to grow and fill remaining space */
 }
+
+.header-invoice2 {
+    position: fixed;
+    top: 2;
+    right: -5;
+    width: 20%;
+    margin-right: 10px;
+    opacity: 0.9;
+}
+
+.content_after_header {
+    margin-top: 4cm;
+}
+
+.left {
+    /* top: 20; */
+    /* position: absolute; */
+    font-family: Calibri;
+    font-size: 12px;
+    margin-top: 100px;
+    padding: 2px;
+    /* overflow-x: auto; */
+
+    /* width: calc(100% - 100px); */
+}
+.td_top ol {
+    padding-top: 0;    /* margin-top: 2; */
+    margin-top: 0;    /* margin-top: 2; */
+
+
+}
+
+
+
+
+.left tr td {
+    padding: 0px;
+
+}
+
+.page-break {
+    page-break-after: always;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: left;
+    font-size: 12px;
+}
+
+
+/* Define style for page number display */
+.pagenum:before {
+    content: "Page " counter(page) " of " counter(pages);
+}
+
 .h3 {
     font-family: Calibri;
     font-weight: bold;
     font-style: normal;
     font-size: 18px;
     text-decoration: underline;
-    color:#102b5d;
+    color: #102b5d;
     text-align: center;
     margin-top: 40px;
     margin-bottom: 15px;
@@ -149,31 +209,34 @@
     border-color: #ec0e0e;
 
 }
+
 .title2 {
     font-family: Calibri;
     font-weight: bold;
     font-style: normal;
     font-size: 14px;
-    color:#102b5d;
+    color: #102b5d;
 
     /* text-align: center; */
 
 
 }
+
 .title3 {
     font-family: Calibri;
     font-style: normal;
     font-size: 14px;
-    color:#102b5d;
+    color: #102b5d;
 
     /* text-align: center; */
 
 
 }
-.header2{
+
+.header2 {
     margin-bottom: 10px;
     /* margin-top: -30px; */
-    color:#102b5d;
+    color: #102b5d;
     font-size: 14px;
     font-weight: bold;
     text-transform: uppercase;
@@ -189,12 +252,14 @@
 
 
 }
-.striped tr:nth-child(even){
+
+.striped tr:nth-child(even) {
     background-color: #b4c6e6;
     font-size: 14px;
 
 
 }
+
 .striped tr {
     color: #102b5d;
     font-size: 14px;
@@ -216,7 +281,8 @@
 
 
 }
-.striped tfoot tr:nth-child(2){
+
+.striped tfoot tr:nth-child(2) {
     background-color: #b4c6e6;
     color: #102b5d;
     font-style: italic;
@@ -226,26 +292,28 @@
 
 }
 
-.bank{
-    /* margin-top: -20px; */
-    font-size: 14px;
+table.bank {
+    /* margin-top: 100px; */
+    font-size: 12px;
     text-align: left;
     border-collapse: collapse;
+    display: table;
+    table-layout: fixed;
+    word-wrap: break-word;
+
 
 }
 
-.bank td th{
-    border: 1px solid;
 
-}
+
 
 .bank thead tr:first-child {
     background-color: #00ad4c;
     color: #ffffff;
-    text-align: left;
 
 
 }
+
 .bank thead tr:nth-child(2) {
     background-color: #00ad4c;
     color: #ffffff;
@@ -253,15 +321,20 @@
 
 
 }
-.bank tbody tr:nth-child(even){
-    background-color: #e6e6e6aa;
+
+.bank tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
 
 
 }
-.bank tbody tr {
+
+.bank tbody tr td {
+    padding: 0;
     color: #0c341d;
 
-
 }
 
+.bank thead tr td {
+    padding: 2px;
 
+}
